<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@drawable/aaa"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.kcl.www.raspberry_pi_irrigation_system.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6FP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="top"
            android:text="Forgotten Pin Code"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView6FFP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:text="To retrieve your PIN code, follow the instructions:"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewIPFP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="Enter the IP of your registered device below:"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />


        <EditText
            android:id="@+id/editTextIPFP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_transp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewUsernameFP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="Enter the registered admin username:"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editTextUsernameFP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_transp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewUsernamePassFP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="Enter the registered username password:"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editTextUsernamePasswordFP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_transp"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.17"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewHidded"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text=""
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textViewPassForgot"
            android:layout_width="25mm"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_transp"
            android:textSize="12sp" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="0.17"-->
        <!--android:orientation="vertical">-->

        <!--<Button-->
            <!--android:id="@+id/RetrievePINButton"-->
            <!--android:layout_width="26mm"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="0.5"-->
            <!--android:background="@drawable/ripple_effect_button_shape"-->
            <!--android:text="Retrieve PIN"-->
            <!--android:textSize="12sp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ForgotPassBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:background="@drawable/ripple_effect_button_shape"
            android:clickable="true"
            android:text="BACK"
            android:textSize="12sp" />


        <Button
            android:id="@+id/RetrievePINButton"
            android:layout_width="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/ripple_effect_button_shape_6"
            android:text="Retrieve PIN"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
