<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@drawable/aaaaaaa"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.kcl.www.raspberry_pi_irrigation_system.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewGE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:text="Sign up to GardenExpert"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textSize="16sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewIP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="0.5"
            android:text="Enter the IP of your device below:"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />


        <EditText
            android:id="@+id/editTextIP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_transp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="Admin username:"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_transp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewUsernamePassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Password:"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editTextUsernamePasswordA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_transp"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewFirstPin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="Enter a 4 digit PIN:"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editTextFirstPIN"
            android:layout_width="25mm"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:background="@drawable/background_transp"
            android:maxLength="4"
            android:ems="10"
            android:inputType="numberPassword"
            android:textAlignment="center" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textViewSecondPin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="Confirm PIN:"
            android:textAlignment="center"
            android:textColor="#2c3e50"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editTextSecondPIN"
            android:layout_width="25mm"
            android:layout_height="0dp"
            android:maxLength="4"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:background="@drawable/background_transp"
            android:ems="10"
            android:inputType="numberPassword"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/SignUpBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:clickable="true"
            android:layout_gravity="bottom"
            android:background="@drawable/ripple_effect_button_shape"
            android:text="BACK"
            android:textSize="12sp" />

        <Button
            android:id="@+id/SignUpStop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:clickable="true"
            android:layout_gravity="bottom"
            android:background="@drawable/ripple_effect_button_shape_6"
            android:text="LINK DEVICe"
            android:textSize="12sp" />


    </LinearLayout>

</LinearLayout>
